-
Bug
-
Resolution: Fixed
-
P3
-
hs25
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8010890 | 8 | Mikael Gerdin | P3 | Resolved | Fixed | b83 |
The expected behavior is that with CMS when the allocation of native memory reaches a certain value (the default value of MetaspaceSize) that a concurrent collection of the old generation will start and that classunloading will happen at the end of the concurrent collection of the old generation and native memory for class metadata will be reused.
But classunloading does not happen.
But classunloading does not happen.
- backported by
-
JDK-8010890 NPG: classunloading does not happen while CMS GC with -XX:+CMSClassUnloadingEnabled is used
-
- Resolved
-