8005602: NPG: classunloading does not happen while CMS GC with -XX:+CMSClassUnloadingEnabled is used

Call purge() on CLDG after sweep(), reorder purge() call in GenCollectedHeap

Reviewed-by: jmasa, stefank